# OntoL-Web-Agent

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  _all.json  _all_data.txt  _cg.json  _check.json  _m5.json  _nb3.json  _ot3.html  _pm.html  _pm2.html  _pm3.html  _run.py  _tmp_parse2.json  _tmp_req2.json  pyproject.toml
.claude/: settings.local.json
business/: BUSINESS.md  __init__.py  master_agent.py
business/api/: __init__.py
business/audit/: __init__.py  audit_service.py
business/chat/: __init__.py  chat_service.py
business/llm/: llm_config_service.py
business/ontology/: __init__.py
business/prompts/: __init__.py  master.txt
business/quality/: __init__.py  analyzer.py
business/reasoning/: __init__.py  engine.py  graph_ops.py  rules.py  step1_clone.py  step2_relink.py  step3_inherit.py  step4_reason.py
business/route_planning/: __init__.py  agent.py  graph.py  nodes.py  state.py
business/strike_decision/: __init__.py  agent.py  graph.py  nodes.py  state.py
business/tool/: SecurityUtils.py  __init__.py  excel_handler.py  snowflake.py  uuid_gen.py
business/transformation/: __init__.py  func_converter.py  jsonpath_converter.py  owl2_converter.py  rdfs_converter.py  rule_converter.py  shacl_converter.py  swrl_converter.py
business/upload/: __init__.py  excel_service.py  import_service.py  parser.py  prompts.py  validation.py
capabilities/: CAPABILITIES.md  __init__.py
capabilities/agents/: AGENTS.md  __init__.py  base.py  chat_agent.py
capabilities/chains/: CHAINS.md  __init__.py
common/: COMMON.md  __init__.py
common/config/: __init__.py  (+1 more)
deployments/: DEPLOYMENTS.md
docs/: naming-convention.md
gateway/: GATEWAY.md  __init__.py  app.py
infrastructure/: INFRASTRUCTURE.md  __init__.py
orchestrator/: ORCHESTRATOR.md  __init__.py
scripts/: build.sh  migrate.sh
tests/: TESTS.md
(+127 files in other folders)
